--- a/app/index.html
+++ b/app/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <title>Recetas y menus</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
-    <div ng-controller="recipySearchCtrl as searchBar">
-      <input ng-model="searchBar.recipyName" ng-change="searchBar.findRecipy(searchBar.recipyName)">
-      <ul class="suggestion">
-        <li ng-repeat="r in searchBar.avalaibleRecipies">{{r.name}}</li>
-      </ul>
-    </div>
+    <div ui-view></div>
+    <script src="../node_modules/api-check/dist/api-check.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="../node_modules/ui-router/angular-ui-router.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.1/angularfire.min.js"></script>
+    <script src="../node_modules/angular-formly/dist/formly.min.js"></script>
+    <script src="../node_modules/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.min.js"></script>
     <script src="js/tmp/app.js"></script>
   </body>
 </html>
