Añado estado y gestion por eventos

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Recetas y menus</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div ui-view></div>
