--- a/design/index.html
+++ b/design/index.html
@@ -6,6 +6,13 @@
     <title>Recetas y menus</title>
     <link rel="stylesheet" href="../app/css/reset.css">
     <style>
+        .week{
+            margin:30px auto;
+            width:90%
+        }
+        .week-planner{
+            
+        }
         .search-bar{
             margin:30px auto;
             width:90%
@@ -136,7 +143,23 @@
         <div class="week-selector"></div>
         <div class="week-tools"></div>
         <div class="week-planner">
-            <div></div>
+            <div>
+                <div class="week_day_title">Monday</div>
+                <div class="week_day_meal">
+                    <span class="week_day_meal_title">Meal</span>
+                    <ul>
+                        <li>Salad</li>
+                        <li>Carrot cake</li>
+                    </ul>
+                </div>
+                <div class="week_day_meal">
+                    <span class="week_day_meal_title">Dinner</span>
+                    <ul>
+                        <li>ham & cheese omelete</li>
+                        <li>Piece of fruit</li>
+                    </ul>
+                </div>
+            </div>
             <div></div>
             <div></div>
             <div></div>
